--- a/support.html
+++ b/support.html
@@ -14,6 +14,7 @@
         <header>
             <h2><a href="index.html" class="logo"><i class="fa-solid fa-crosshairs"></i> PRECISION</a></h2>
             <div class="navbar">
+                <a href="index.html"><i class="fa-solid fa-house"></i> Home</a>
                 <a href="store.html"><i class="fa-solid fa-computer-mouse"></i></i> Store</a>
                 <a href="services.html"><i class="fa-solid fa-phone"></i> Services</a>
                 <a href="support.html" class="active"><i class="fa-solid fa-headset"></i> Support</a>
